eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Account_Mandate_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account_Mandate__c</fullName>
        <label>Account Mandate</label>
        <referenceTo>Account_Mandate__c</referenceTo>
        <relationshipLabel>Account Mandate Items</relationshipLabel>
        <relationshipName>Account_Mandate_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>No_From_Group__c</fullName>
        <label>No From Group</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Aunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Signatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signatory_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signatory Group</label>
        <referenceTo>Signatory_Group__c</referenceTo>
        <relationshipLabel>Account Mandate Items</relationshipLabel>
        <relationshipName>Account_Mandate_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signatory</label>
        <referenceTo>Asset_Relationship__c</referenceTo>
        <relationshipLabel>Account Mandate Items</relationshipLabel>
        <relationshipName>Account_Mandate_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Mandate Item</label>
    <nameField>
        <label>Account Mandate Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Mandate Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>